# orx

./: CONTRIBUTING.md  LICENSE  README.md  autodoc.py  pyproject.toml
docs/: _doc.json  index.html
orx/: __init__.py  __main__.py  errors.py  version.py
orx/api/: bot.py
orx/cli/: __init__.py
orx/impl/: errors.py  types.py
orx/impl/client/: __init__.py  client.py  options.py  resolver.py
orx/impl/client/struct/: __init__.py
orx/impl/gateway/: __init__.py  client.py  event.py  ratelimiter.py  shard.py
orx/impl/http/: __init__.py  client.py  file.py  ratelimiter.py  route.py
orx/objects/: __init__.py  asset.py  channel.py  embed.py  guild.py  object.py  repr.py  state.py  user.py
orx/proto/gateway/: __init__.py  client.py  ratelimiter.py  shard.py
orx/proto/http/: __init__.py  client.py  ratelimiter.py  route.py
orx/src/client/: __init__.py  client.py  options.py  resolver.py
orx/src/client/struct/: cog.py
orx/src/gateway/: __init__.py  client.py  event.py  shard.py
orx/src/http/: client.py  file.py  ratelimiter.py  route.py
orx/utils/: __init__.py  misc.py  types.py
